docs(architecture): 更新分层与 DTO 约束文档 feat(dto): 新增 Collection、Document、Search、Error 共 4 个 DTO

--- a/Qdrant_Insertor/tsconfig.json
+++ b/Qdrant_Insertor/tsconfig.json
@@ -9,9 +9,10 @@
     "types": ["node", "jest"],
     "baseUrl": ".",
     "paths": {
-      "config": ["./config.ts"] // 暂时保留，后续再看是否需要调整
+      "config": ["src/config.ts"], // 暂时保留，后续再看是否需要调整
+      "share/*": ["share/*"]
     }
   },
-  "include": ["src", "test", "utils", "config.ts"],
+  "include": ["backend", "share"],
   "exclude": ["node_modules", "dist"]
 }
