--- a/Qdrant_Insertor/package.json
+++ b/Qdrant_Insertor/package.json
@@ -14,7 +14,8 @@
     "express": "^5.1.0",
     "glob": "^11.0.3",
     "openai": "^5.16.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/js": "^9.34.0",
