--- a/Qdrant_Insertor/.env.example
+++ b/Qdrant_Insertor/.env.example
@@ -8,6 +8,7 @@ EMBEDDING_MODEL_NAME="text-embedding-ada-002"
 # --------------------------------------------------
 # Qdrant Configuration
 # --------------------------------------------------
+QDRANT_URL="http://localhost:6333"
 QDRANT_PROTOCOL="http"
 QDRANT_HOST="localhost"
 QDRANT_PORT="6333"
