--- a/Qdrant_Insertor/package.json
+++ b/Qdrant_Insertor/package.json
@@ -1,60 +1,37 @@
 {
-  "name": "qdrant-insertor",
+  "name": "qdrant-mcp-rag",
   "version": "1.0.0",
-  "description": "A simple Qdrant insertor",
   "type": "module",
+  "description": "Qdrant MCP RAG System",
+  "private": true,
+  "workspaces": [
+    "packages/*",
+    "shared"
+  ],
   "scripts": {
-    "start": "tsx backend/src/index.ts",
-    "dev": "tsx watch backend/src/index.ts",
-    "build": "tsc",
-    "build-exec": "pkg . -t node18-win-x64,node18-linux-x64 -o dist/seo-manager",
-    "format": "prettier --write .",
-    "format:check": "prettier --check .",
-    "lint": "npx eslint ."
-  },
-  "ts-node": {
-    "preferTsExts": true
-  },
-  "dependencies": {
-    "@qdrant/js-client-rest": "^1.15.0",
-    "@types/multer": "^2.0.0",
-    "@types/node-cron": "^3.0.11",
-    "@types/winston": "^2.4.4",
-    "better-sqlite3": "^12.2.0",
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0",
-    "formdata-node": "^6.0.3",
-    "glob": "^11.0.3",
-    "multer": "^2.0.2",
-    "node-cron": "^4.2.1",
-    "openai": "^5.16.0",
-    "uuid": "^11.1.0",
-    "winston": "^3.18.3",
-    "zod": "^3.25.76"
+    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
+    "dev:backend": "npm run dev --workspace=packages/backend",
+    "dev:frontend": "npm run dev --workspace=packages/frontend",
+    "build": "npm run build --workspaces",
+    "build:backend": "npm run build --workspace=packages/backend",
+    "build:frontend": "npm run build --workspace=packages/frontend",
+    "build:shared": "npm run build --workspace=shared",
+    "lint": "npm run lint --workspaces",
+    "lint:fix": "npm run lint:fix --workspaces",
+    "format": "prettier --write \"packages/**/*.{ts,tsx,js,jsx,css,md}\" \"shared/**/*.{ts,js,md}\"",
+    "type-check": "npm run type-check --workspaces",
+    "clean": "npm run clean --workspaces && rm -rf node_modules",
+    "install:all": "npm install && npm run build:shared",
+    "test": "npm run test --workspaces",
+    "check-lines" : "npm run format && node ./Scripts/check-lines.js"
   },
   "devDependencies": {
-    "@eslint/js": "^9.34.0",
-    "@swc/core": "^1.13.5",
-    "@swc/jest": "^0.2.39",
-    "@types/better-sqlite3": "^7.6.13",
-    "@types/express": "^5.0.3",
-    "@types/jest": "^30.0.0",
-    "@types/mime-types": "^3.0.1",
-    "@types/node": "^24.3.0",
-    "@types/supertest": "^6.0.3",
-    "@typescript-eslint/eslint-plugin": "^8.41.0",
-    "@typescript-eslint/parser": "^8.41.0",
-    "eslint": "^9.34.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.4",
-    "globals": "^16.3.0",
-    "jest": "^30.1.3",
-    "jiti": "^2.5.1",
+    "concurrently": "^8.2.0",
     "prettier": "^3.6.2",
-    "supertest": "^7.1.4",
-    "ts-node": "^10.9.2",
-    "tsx": "^4.20.6",
-    "typescript": "^5.9.2",
-    "typescript-eslint": "^8.41.0"
+    "typescript": "^5.0.2"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   }
 }
